Dark mode fixes

--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -1,23 +1,33 @@
 
     /* Common theme */
+    
     html,
     body,
-    :not([style*="background-color:"]) {
+    :not([style*="background-color:"]){
         background-color: rgb(24, 26, 27) !important;
     }
     html,
     body,
-    :not([style*="color:"]) {
+    :not([style*="color:"]):not(.title ) {
         color: rgb(167, 158, 139) !important;
     }
-    h1:not([style*="color:"]),
-    h2:not([style*="color:"]),
-    h3:not([style*="color:"]),
-    h4:not([style*="color:"]),
-    h5:not([style*="color:"]),
-    h6:not([style*="color:"]) {
-        color: rgb(247, 142, 102) !important;
+    
+
+    h1:not([style*="color:"]):not(.title),
+    h2:not([style*="color:"]):not(.title)
+     {
+        color: #428bca!important;
     }
+
+    
+    h3:not([style*="color:"]):not(.title),
+    h4:not([style*="color:"]):not(.title),
+    h5:not([style*="color:"]):not(.title),
+    h6:not([style*="color:"]):not(.title)
+    {
+        color: rgb(256, 256, 256) !important;
+    }
+
     cite:not([style*="color:"]) {
         color: rgb(128, 204, 148) !important;
     }
@@ -39,22 +49,22 @@
     [role="button"]:active, [role="button"]:focus {
         background-color: rgb(29, 56, 83) !important;
     }
-    a:not([style*="color:"]) {
-        color: rgb(128, 182, 204) !important;
+    a:not([style*="color:"]):not(.title) {
+        color: rgb(256, 256, 256) !important;
     }
     a:not([style*="color:"]):hover {
-        color: rgb(142, 193, 217) !important;
+        color: rgb(125, 178, 219) !important;
     }
     a:not([style*="color:"]):active, a:not([style*="color:"]):focus {
-        color: rgb(155, 203, 230) !important;
+        color: rgb(125, 178, 219) !important;
     }
-    :not([style*="border-color:"]),
+    :not([style*="border-color:"]):not(.title),
     ::before,
     ::after {
-        border-color: rgb(80, 115, 134) !important;
+        border-color: #0e4e86 !important;
     }
     div:empty {
-        background-color: rgb(16, 20, 23) !important;
+        background-color: rgb(24, 26, 27) !important;
     }
     input::placeholder,
     textarea::placeholder {
@@ -64,4 +74,70 @@
     textarea:not([style*="background-image:"]) {
         background-image: none !important;
     }
-    
+    .content-navigation-header
+    {
+        color: rgb(128, 192, 242) !important;
+    }
+  
+
+.highlight .c { color: #999988 !important; font-style: italic } 
+.highlight .err { color: #a61717 !important; background-color: #e3d2d2 } 
+.highlight .k { color: #ffffff !important; font-weight: bold } 
+.highlight .o { color: #ffffff !important; font-weight: bold } 
+.highlight .cm { color: #999988 !important; font-style: italic } 
+.highlight .cp { color: #999999 !important; font-weight: bold; font-style: italic } 
+.highlight .c1 { color: #999988 !important; font-style: italic } 
+.highlight .cs { color: #999999 !important; font-weight: bold; font-style: italic } 
+.highlight .gd { color: #ffffff !important; background-color: #ffdddd } 
+.highlight .ge { color: #ffffff !important; font-style: italic } 
+.highlight .gr { color: #aa0000 !important; } 
+.highlight .gh { color: #999999 !important;} 
+.highlight .gi { color: #ffffff !important; background-color: #ddffdd } 
+.highlight .go { color: #888888 !important; } 
+.highlight .gp { color: #555555 !important; } 
+.highlight .gs { font-weight: bold } 
+.highlight .gu { color: #aaaaaa !important; } 
+.highlight .gt { color: #aa0000 !important; } 
+.highlight .kc { color: #ffffff !important; font-weight: bold } 
+.highlight .kd { color: #ffffff !important; font-weight: bold } 
+.highlight .kn { color: #ffffff !important; font-weight: bold } 
+.highlight .kp { color: #ffffff !important; font-weight: bold } 
+.highlight .kr { color: #ffffff !important; font-weight: bold } 
+.highlight .kt { color: #445588 !important; font-weight: bold } 
+.highlight .m { color: #009999 !important;} 
+.highlight .s { color: #d01040 !important;} 
+.highlight .na { color: #008080 !important;} 
+.highlight .nb { color: #0086B3 !important;} 
+.highlight .nc { color: #445588 !important; font-weight: bold } 
+.highlight .no { color: #008080 !important;} 
+.highlight .nd { color: #3c5d5d !important; font-weight: bold } 
+.highlight .ni { color: #800080 !important;} 
+.highlight .ne { color: rgb(255, 97, 97)0 !important; font-weight: bold } 
+.highlight .nf { color: rgb(255, 97, 97)0 !important; font-weight: bold } 
+.highlight .nl { color: rgb(255, 97, 97)0 !important; font-weight: bold } 
+.highlight .nn { color: #555555 !important;} 
+.highlight .nt { color: #000080 !important;} 
+.highlight .nv { color: #008080 !important;} 
+.highlight .ow { color: #ffffff !important; font-weight: bold } 
+.highlight .w { color: #bbbbbb !important;} 
+.highlight .mf { color: #009999 !important;} 
+.highlight .mh { color: #009999 !important;} 
+.highlight .mi { color: #009999 !important;}
+.highlight .mo { color: #009999 !important;} 
+.highlight .sb { color: #d01040 !important;}
+.highlight .sc { color: #d01040 !important;}
+.highlight .sd { color: #d01040 !important;}
+.highlight .s2 { color: #d01040 !important;}
+.highlight .se { color: #d01040 !important;}
+.highlight .sh { color: #d01040 !important;}
+.highlight .si { color: #d01040 !important;}
+.highlight .sx { color: #d01040 !important;}
+.highlight .sr { color: #009926 !important;}
+.highlight .s1 { color: #d01040 !important;}
+.highlight .ss { color: #990073 !important;}
+.highlight .bp { color: #999999 !important;}
+.highlight .vc { color: #008080 !important;}
+.highlight .vg { color: #008080 !important;}
+.highlight .vi { color: #008080 !important;}
+.highlight .il { color: #009999 !important;}
+.highlight .lineno{ color: rgba(0,0,0,0.3) !important; border-right: solid 1px rgba(0,0,0,0.3); padding-right: 5px;}
